# mixauralis

./: .gitignore  Auralis.jucer  CMakeLists.txt  dev_plan.md  readme.md
Builds/MacOSX/: Info-App.plist
Builds/MacOSX/Auralis.xcodeproj/: project.pbxproj
Builds/MacOSX/Auralis.xcodeproj/project.xcworkspace/xcuserdata/josh.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/Auralis.xcodeproj/xcuserdata/josh.xcuserdatad/xcschemes/: xcschememanagement.plist
JuceLibraryCode/: JuceHeader.h
Source/: MainApp.cpp  MainApp.h  MainWindow.h
Source/Audio/: AudioEngine.cpp  AudioEngine.h  ChannelProcessor.cpp  ChannelProcessor.h  FXBusProcessor.cpp  FXBusProcessor.h  GroupBusProcessor.cpp  GroupBusProcessor.h  MasterBusProcessor.cpp  MasterBusProcessor.h  RoutingManager.cpp  RoutingManager.h  TruePeakLimiterProcessor.cpp  TruePeakLimiterProcessor.h  TunerProcessor 2.cpp  TunerProcessor.cpp  TunerProcessor.h
Source/FX/: CompressorProcessor.cpp  CompressorProcessor.h  DelayProcessor.cpp  DelayProcessor.h  EQProcessor.cpp  EQProcessor.h  GateProcessor.cpp  GateProcessor.h  ReverbProcessor.cpp  ReverbProcessor.h  TrimProcessor.cpp  TrimProcessor.h
Source/Routing/: RoutingManager.cpp  RoutingManager.h
Source/Soundcheck/: SoundcheckEngine.cpp  SoundcheckEngine.h  ToneProfiles.h
Source/State/: SessionManager.cpp  SessionManager.h
Source/UI/: AudioSettingsDialog.cpp  AudioSettingsDialog.h  ChannelStripComponent.cpp  ChannelStripComponent.h  ChannelsComponent.cpp  ChannelsComponent.h  FXBusesComponent.cpp  FXBusesComponent.h  GroupBusComponent.cpp  GroupBusComponent.h  LevelMeter.h  LoudnessMeterComponent.cpp  LoudnessMeterComponent.h  MainComponent.cpp  MainComponent.h  MasterBusComponent.cpp  MasterBusComponent.h  RoutingComponent.cpp  RoutingComponent.h  RoutingMatrixComponent.cpp  RoutingMatrixComponent.h  SettingsComponent.cpp  SettingsComponent.h  SoundcheckPanel.cpp  SoundcheckPanel.h
Source/Utils/: BlackwayLookAndFeel.h  StyleManager.cpp  StyleManager.h
Subscription/: SubscriptionManager.cpp  SubscriptionManager.h
Tests/: SessionRoundTripTest.h
